--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="main-container">
-      <h1>Featured iPhone Accessories</h1>
+      <h1 class="title-header">Featured iPhone Accessories</h1>
       <div class="box-container">
         <div class="col-left">
           <div class="row1">
